5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4009/executions/1590_1016.log
== TEST (2019-03-26 14:06:21) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
s=a+b+c/2
from math import*
A=sqrt(s*(s-a)*(s-b)*(s-c))
print(round A,5)
-- ERROR:
File "XXXX", line 7
    print(round A,5)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 14:06:23) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
s=a+b+c/2
from math import*
A=sqrt(s*(s-a)*(s-b)*(s-c))
print(round A,5)
-- EXECUTION TIME:
0.181515
-- ERROR:
  File "/home/codebench/codes/1590/1016/main.py", line 7
    print(round A,5)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 14:06:30) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
s=a+b+c/2
from math import*
A=sqrt(s*(s-a)*(s-b)*(s-c))
print(round A,5))
-- EXECUTION TIME:
0.193031
-- ERROR:
  File "/home/codebench/codes/1590/1016/main.py", line 7
    print(round A,5))
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 14:06:40) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
s=a+b+c/2
from math import*
A=sqrt(s*(s-a)*(s-b)*(s-c))
print(roundA,5))
-- EXECUTION TIME:
0.142625
-- ERROR:
  File "/home/codebench/codes/1590/1016/main.py", line 7
    print(roundA,5))
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 14:06:42) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
s=a+b+c/2
from math import*
A=sqrt(s*(s-a)*(s-b)*(s-c))
print(roundA,5))
-- EXECUTION TIME:
0.201307
-- ERROR:
  File "/home/codebench/codes/1590/1016/main.py", line 7
    print(roundA,5))
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 14:06:45) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
s=a+b+c/2
from math import*
A=sqrt(s*(s-a)*(s-b)*(s-c))
print(round A,5))
-- EXECUTION TIME:
0.203723
-- ERROR:
  File "/home/codebench/codes/1590/1016/main.py", line 7
    print(round A,5))
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 14:07:00) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
s=a+b+c/2
from math import*
A=sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A,5))
-- EXECUTION TIME:
0.122997
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
638.20837
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
3909.36376
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
4627.14693
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 14:07:12) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
s=a+b+c/2
from math import*
A=sqrt(s*(s-a)*(s-b)*(s-c))
print(round(a,5))
-- EXECUTION TIME:
0.158262
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
11.0
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
30.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
33.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 14:07:25) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
s=a+b+c/2
from math import*
A=sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A,5))
-- EXECUTION TIME:
0.139041
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
638.20837
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
3909.36376
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
4627.14693
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 14:07:27) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
s=a+b+c/2
from math import*
A=sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A,5))
-- EXECUTION TIME:
0.123801
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
638.20837
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
3909.36376
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
4627.14693
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 14:07:28) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
s=a+b+c/2
from math import*
A=sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A,5))
-- OUTPUT:
638.20837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 14:07:56) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
s=(a+b+c)/2
from math import*
A=sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A,5))
-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 14:08:24) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
s=(a+b+c)/2
from math import*
A=sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A,5))
-- EXECUTION TIME:
0.165823
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
